--- a/Desafio_Hashteg_Treinamentos.ipynb
+++ b/Desafio_Hashteg_Treinamentos.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "# Código criado junto a equipe da (https://www.instagram.com/hashtagprogramacao/)\n",
         "\n",
-        "# Durante o mini curso Gratuito de python oferecido pela Hasteg Treinamentos (https://pages.hashtagtreinamentos.com/minicurso-python-curso-basico-python-obrigado?blog=1n4033rer&video=2t0630j73)\n",
+        "# Durante o curso Gratuito de python oferecido pela Hasteg Treinamentos (https://pages.hashtagtreinamentos.com/minicurso-python-curso-basico-python-obrigado?blog=1n4033rer&video=2t0630j73)\n",
         "\n",
         "---\n",
         "---"
