--- a/Desafio_Hashteg_Treinamentos.ipynb
+++ b/Desafio_Hashteg_Treinamentos.ipynb
@@ -38,16 +38,17 @@
         "---\n",
         "---\n",
         "\n",
-        "#-Aplicações de Python, Instalação e Lógica de Programação\n",
-        "#-Importar bibliotecas e exibir informações\n",
-        "#-Estruturas de repetição e format\n",
-        "#-Estruturas de condição e texto\n",
-        "#-Tabelas e base de dados \n",
-        "#-Indicadores graficos\n",
-        "#-Indetação utilizando o \"Tab\"; \n",
-        "#-Estruturas de repetição \"for\"; \n",
-        "#-Concetar ao Google Drive usando o \"os\"; \n",
-        "#-Formatação para texto; \n",
+        "#-Instalação de bibliotecas";
+        "# Lógica de Programação\n";
+        "#-Importar bibliotecas e exibir informações\n";
+        "#-Estruturas de repetição e format\n";
+        "#-Estruturas de condição e texto\n";
+        "#-Tabelas e base de dados \n";
+        "#-Indicadores graficos\n";
+        "#-Indetação utilizando o \"Tab\"; \n";
+        "#-Estruturas de repetição \"for\"; \n";
+        "#-Concetar ao Google Drive usando o \"os\"; \n";
+        "#-Formatação para texto; \n";
         "\n",
         "\n",
         "\n",
