--- a/Desafio_Hashteg_Treinamentos.ipynb
+++ b/Desafio_Hashteg_Treinamentos.ipynb
@@ -39,7 +39,7 @@
         "---\n",
         "\n",
         "#-Instalação de bibliotecas";
-        "# Lógica de Programação\n";
+        "#-Lógica de Programação\n";
         "#-Importar bibliotecas e exibir informações\n";
         "#-Estruturas de repetição e format\n";
         "#-Estruturas de condição e texto\n";
